fix the overflow of main background

--- a/css/app.css
+++ b/css/app.css
@@ -9,7 +9,7 @@ body{
 }
 
 main{
-	background: url('../images/main-bg.jpg');
+	background: url('../images/main-bg.jpg') no-repeat center 0;
 	min-height: 100%;
 }
 
